--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			</div>
 			<div class="col-lg-2 col-6 d-flex justify-content-end">	
 				<button  class="button">
-					<img class="button-icon" src="img/cart.png" alt="icon: cart">
+					<img class="button-icon" src="img/Cart.png" alt="icon: cart">
 					<span class="button-text">Cart</span>
 				</button>
 			</div>
