--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
 				<div class="row justify-content-between">
 					<div class="col-1">
 						<button class="slider-button slider-button-prev ">
-							<img src="img/Arrow-prev.svg" alt="icon: arrow-prev">
+							<img src="img/arrow-prev.svg" alt="icon: arrow-prev">
 						</button>
 					</div>
 					<div class="col-1">
 						<button class="slider-button slider-button-next">
-							<img src="img/Arrow-next.svg" alt="icon: arrow-next">
+							<img src="img/arrow-next.svg" alt="icon: arrow-next">
 						</button>
 					</div>
 				</div>
@@ -127,7 +127,7 @@
 					Beauty & Swimwear</p>
 					<button class="button">
 						<span class="button-text">View all</span>
-						<img src="img/arrow.svg" alt="icon: arrow" class="button-icon">
+						<img src="img/Arrow.svg" alt="icon: arrow" class="button-icon">
 					</button>
 				</div>
 			</div>
